Update dependencies to newer versions
- Update dependency versions in pom.xml
- Change dependency import for spark StringUtil
- Change StringUtil.isEmpty to isEmpty in DownloaderImpl